<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.views.AddUserActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blueBackgroundPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="@string/add_user"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="25dp"
                android:text="@string/email"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="25dp"
                android:text="@string/password"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="25dp"
                android:text="@string/language"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="25dp"
                android:text="@string/age"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:theme="@style/CustomEditTextThemePrimary"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:theme="@style/CustomEditTextThemePrimary"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingTop="30dp" />

            <EditText
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:paddingTop="20dp"
                android:textColor="@color/white"
                android:theme="@style/CustomEditTextThemePrimary"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:paddingTop="20dp"
                android:textColor="@color/white"
                android:theme="@style/CustomEditTextThemePrimary"
                tools:ignore="LabelFor" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:startColor="@color/blueBackgroundPrimary"
            android:text="@string/accept"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@drawable/border"
            android:endColor="#230676"
            android:radius="3dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>