<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.views.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/border_login"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:theme="@style/CustomEditTextThemeLogin"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:theme="@style/CustomEditTextThemeLogin"
            tools:ignore="LabelFor,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:background="@drawable/border_login"
                android:endColor="#230676"
                android:radius="3dp"
                android:text="@string/login"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>